<resources>
    <string name="app_name">MemoryNotes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="navigation_drawer_all_notes">All notes</string>
    <string name="navigation_drawer_notebook">Note books</string>

    <string name="action_add_book">Add book</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="action_cancel">cancel</string>
    <string name="action_ok">ok</string>

    <string name="new_book">New book</string>
    <string name="new_book_hint">Name</string>
</resources>
