<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_notes"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/navigation_drawer_all_notes" />
        <item
            android:id="@+id/nav_notebook"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/navigation_drawer_notebook" />
        <!--item
            android:id="@+id/nav_"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" /-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>

</menu>
